Fixed z-index

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -3,11 +3,11 @@
 main .hero-container > div {
   max-width: unset;
 }
-  
+
 main .hero-container {
   margin-top: calc(var(--nav-height) * -1);
 }
-  
+
 main .hero {
   position: relative;
   min-height: var(--hero-min-height-xs);
@@ -38,7 +38,7 @@ main .hero h2 {
 
 main .hero picture {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   inset: 0;
   object-fit: cover;
   box-sizing: border-box;
@@ -55,7 +55,7 @@ main .hero img {
     height: var(--hero-height-m);
     padding: 0;
   }
-  
+
   main .hero h2 {
     line-height: 56px;
     transform: translateY(140%);
